2006-07-07  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderertoggle.xml ("toggled"): path is a string.
	Fixes #334473 (Alexander Konovalenko)

	======== 2.9.0 ============
2006-07-06  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Version 2.9.0.

	* pygtk-introduction.xml: Update for PyGTK 2.10

	* pygtk-pangofont.xml (get_font_map): Add.

	* pygtk-pangofontdescription.xml (get_size_is_absolute)
	(set_absolute_size): Add.

	* pygtk-pangoattribute.xml: Add descriptions of new text attributes.

	* pygtk-atk-constants.xml: Add Text constants.

	* pygtk-atkrectangle.xml: Add.

	* pygtk-atk-classes.xml: Add pygtk-atkrectangle.

	* pygtk-atkregistry.xml: 
	* pygtk-atkrelation.xml: 
	* pygtk-atkrelationset.xml: 
	* pygtk-atkselection.xml: 
	* pygtk-atkstateset.xml: 
	* pygtk-atkstreamablecontent.xml: 
	* pygtk-atktable.xml: 
	* pygtk-atktext.xml: 
	* pygtk-atkvalue.xml: Update to PyGTK API.

	* pygtk-atkutil.xml: Remove.

2006-06-27  John Finlay  <finlay@moeraki.com>

	* Add atk docs and new gtk 2.10 class docs.

	* Add links to ancestor properties and signals. Add new GTK 2.10
	classes, methods, functions and constants. Remove unused file
	pygtk-classes.xml

2006-06-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gladexml.xml (set_custom_widget_callbacks): Fix external link.
	(signal_autoconnect): Fix typo.

2006-06-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gobject-constants.xml (Type Constants): Add TYPE_PYOBJECT.

2006-06-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkprintjob.xml: Add.

	* pygtk-gtkprintunixdialog.xml: Add.

	* pygtk-unixprint-constants.xml: Add.

	* pygtk-gtkprinter.xml: Add.

	* pygtk-gtkpagesetupunixdialog.xml: Add.

	* pygtk-unixprint-classes.xml: Add.

	* pygtk2-ref.xml: Add pygtk-unixprint-classes.xml

2006-06-05  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkpapersize.xml: Add link to Paper Name constants.

	* pygtk-gtk-constants.xml: Add Paper Name constants.

2006-06-04  John Finlay  <finlay@moeraki.com>
