@@ -17,12 +17,21 @@
       <programlisting><methodsynopsis language="python">
 	  <methodname><link
 linkend="function-pangocairo--cairo-font-map-get-default">pangocairo.cairo_font_map_get_default</link></methodname>
-	</methodsynopsis><methodsynopsis language="python">
-          <methodname><link linkend="function-pangocairo--context-get-font-options">get_font_options</link></methodname>
+	</methodsynopsis></programlisting>
+
+    </refsect2>
+
+
+
+    <refsect2>
+      <title>Miscellaneous Functions</title>
+
+      <programlisting><methodsynopsis language="python">
+          <methodname><link linkend="function-pangocairo--context-get-font-options">context_get_font_options</link></methodname>
           <methodparam><parameter
 			 role="keyword">context</parameter></methodparam>
       </methodsynopsis><methodsynopsis language="python">
-        <methodname><link linkend="function-pangocairo--context-set-font-options">set_font_options</link></methodname>
+        <methodname><link linkend="function-pangocairo--context-set-font-options">context_set_font_options</link></methodname>
 	  <methodparam><parameter
 			 role="keyword">context</parameter></methodparam>
 	  <methodparam><parameter
