@@ -1,5 +1,7 @@
 2006-07-07  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-pangocairo-functions.xml: Fix function names and reorg.
+
 	* pygtk-gtkcellrenderertoggle.xml ("toggled"): path is a string.
 	Fixes #334473 (Alexander Konovalenko)
 
